adding some project image

--- a/my-portfolio/src/Components/Sidebar.css
+++ b/my-portfolio/src/Components/Sidebar.css
@@ -53,8 +53,8 @@ i{
     margin-bottom: 100px;
 }
 .active{
-    color:#EC1839
+    color:#EC1839;
 }
 .nav-lin:hover{
-    color:rgb(194, 94, 94);
+    color:#cbb0b4;
 }
