--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -49,6 +49,9 @@
         width:230px;
         height: 170px;
     }
+    .container .project-box{
+        margin-left: 0px;
+    }
 }
 
 @media (max-width:412px){
