--- a/my-portfolio/src/Pages/Home.css
+++ b/my-portfolio/src/Pages/Home.css
@@ -47,8 +47,8 @@
     color:#EC1939;
 }
 
-.dev-info button{
-    width: 140px;
+.dev-info a{
+    width: 120px;
     border: 1px solid black;
     background-color:#EC1939;
     color:white;
@@ -57,8 +57,10 @@
     white-space: nowrap;
     border-radius: 22px;
     cursor: pointer;
+    text-decoration: none;
 }
-.dev-info button:hover{
+
+.dev-info a:hover{
     background-color: white;
     color:#EC1939;
 }
